examples/test/testpolicy17057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17057
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key36: value44
      key30: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value1
          key27: value7
      podSelector:
        matchLabels:
          key33: value38
          key11: value16
          key42: value34
